// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches snapshot: enzyme.mount 1`] = `
<glamorous(label)>
  <label
    className="css-wd82g1"
  >
    example
  </label>
</glamorous(label)>
`;

exports[`Label matches snapshot: enzyme.render 1`] = `
<label
  class="css-wd82g1"
>
  example
</label>
`;

exports[`Label matches snapshot: enzyme.shallow 1`] = `
<label
  className="css-wd82g1"
>
  example
</label>
`;
